fix: add a flex-wrap to the nav bar and make the font smaller on smaller screens like iphone5/se

--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,7 @@ header {
  ul {
    list-style-type: none;
    display: flex;
+   flex-wrap: wrap;
    width: auto;
    margin: 0;
    padding: 0;
@@ -26,6 +27,12 @@ header {
 
  .menu:hover {
    background-color: #5757bb;
+ }
+
+ @media only screen and (min-width: 320px) {
+   header {
+     font-size: 0.8em;
+   }
  }
 
  @media only screen and (min-width: 480px) {
